[gd_scene load_steps=7 format=3 uid="uid://06k602f7gxp6"]

[ext_resource type="Script" path="res://Misc/Control/Global.gd" id="1_jpi5u"]
[ext_resource type="Script" path="res://Misc/Control/EscMenu.gd" id="2_51li1"]
[ext_resource type="PackedScene" path="res://Misc/UI/Menu/options.tscn" id="3_1l0cu"]
[ext_resource type="FontFile" uid="uid://dyoqjv20kbqpk" path="res://Misc/Fonts/ethnocentric rg.otf" id="3_upprg"]
[ext_resource type="Texture2D" uid="uid://dxcct8f4yr0lu" path="res://Misc/UI/Menu/PhoenixZeroMiniLogoSMall.png" id="4_u44d5"]

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_ysvrl"]
bg_color = Color(0, 0, 0, 1)
border_width_left = 2
border_width_top = 2
border_width_right = 2
border_width_bottom = 2
border_blend = true
corner_radius_top_left = 5
corner_radius_top_right = 5
corner_radius_bottom_right = 5
corner_radius_bottom_left = 5

[node name="Global" type="Node"]
script = ExtResource("1_jpi5u")

[node name="EscMenu" type="CanvasLayer" parent="."]
script = ExtResource("2_51li1")

[node name="ColorRect" type="ColorRect" parent="EscMenu"]
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
color = Color(0, 0, 0, 0.584314)

[node name="KeybindsMenu" type="Panel" parent="EscMenu"]
custom_minimum_size = Vector2(250, 300)
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = 451.0
offset_top = 174.0
offset_right = -451.0
offset_bottom = -174.0
grow_horizontal = 2
grow_vertical = 2
theme_override_styles/panel = SubResource("StyleBoxFlat_ysvrl")

[node name="MenuItems" type="VBoxContainer" parent="EscMenu/KeybindsMenu"]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -124.0
offset_top = -22.5
offset_right = 124.0
offset_bottom = 277.5
grow_horizontal = 2
grow_vertical = 2
pivot_offset = Vector2(100, 150)

[node name="Resume" type="Button" parent="EscMenu/KeybindsMenu/MenuItems"]
layout_mode = 2
theme_override_colors/font_color = Color(1, 1, 1, 1)
theme_override_fonts/font = ExtResource("3_upprg")
theme_override_font_sizes/font_size = 18
text = "Resume
"
flat = true

[node name="Retry" type="Button" parent="EscMenu/KeybindsMenu/MenuItems"]
layout_mode = 2
theme_override_colors/font_color = Color(1, 1, 1, 1)
theme_override_fonts/font = ExtResource("3_upprg")
theme_override_font_sizes/font_size = 18
text = "retry
"
flat = true

[node name="Options" type="Button" parent="EscMenu/KeybindsMenu/MenuItems"]
layout_mode = 2
theme_override_colors/font_color = Color(1, 1, 1, 1)
theme_override_fonts/font = ExtResource("3_upprg")
theme_override_font_sizes/font_size = 18
text = "Options
"
flat = true

[node name="Quit" type="Button" parent="EscMenu/KeybindsMenu/MenuItems"]
layout_mode = 2
theme_override_colors/font_color = Color(1, 1, 1, 1)
theme_override_fonts/font = ExtResource("3_upprg")
theme_override_font_sizes/font_size = 18
text = "Main Menu"
flat = true

[node name="TextureRect" type="TextureRect" parent="EscMenu/KeybindsMenu"]
layout_mode = 1
anchors_preset = 5
anchor_left = 0.5
anchor_right = 0.5
offset_left = -50.0
offset_top = 11.0
offset_right = 950.0
offset_bottom = 1011.0
grow_horizontal = 2
scale = Vector2(0.1, 0.1)
texture = ExtResource("4_u44d5")

[node name="Options" parent="." instance=ExtResource("3_1l0cu")]
layer = 100
visible = false

[connection signal="pressed" from="EscMenu/KeybindsMenu/MenuItems/Resume" to="EscMenu" method="_on_resume_pressed"]
[connection signal="pressed" from="EscMenu/KeybindsMenu/MenuItems/Retry" to="EscMenu" method="_on_retry_pressed"]
[connection signal="pressed" from="EscMenu/KeybindsMenu/MenuItems/Options" to="EscMenu" method="_on_options_pressed"]
[connection signal="pressed" from="EscMenu/KeybindsMenu/MenuItems/Quit" to="EscMenu" method="_on_quit_pressed"]
